BC1-66-fix: using nth for padding, margin & gap

--- a/app-land/css/style.css
+++ b/app-land/css/style.css
@@ -595,7 +595,7 @@ body li {
     left: 3rem;
     position: relative;
     font-weight: 700;
-    padding-top: 2rem;
+    padding-top: 2em;
   }
   .hero__section .hero__section--text-overlay .container .cta__button {
     position: relative;
@@ -617,8 +617,8 @@ body li {
   .hero__section .hero__section--text-overlay .container .stats-container {
     left: 0;
     font-size: 1.125em;
-    padding-top: 2rem;
-    gap: 3rem;
+    padding-top: 2em;
+    gap: 3em;
     margin: 0 auto;
   }
   .hero__section .hero__section--text-overlay .container .stats-container .stat-item p {
@@ -653,7 +653,6 @@ body li {
   *** FOR MOBILE
   **	MAX : 640PX / 40em
   */
-  
 }
 .explore__hub h2 {
   font-size: 3em;
@@ -815,6 +814,9 @@ body li {
     width: 100%;
     left: 0rem;
   }
+  .explore__hub h2 {
+    text-align: center;
+  }
   .explore__hub .header__section {
     display: grid;
     place-items: center;
@@ -924,10 +926,6 @@ body li {
   /*--------------------------------
   *** FOR RETINA MOBILE AND LANSCAPE
   ** MIN : 500px / 31.25em | MAX : 767PX / 47.9375em
-  */
-  /*--------------------------------
-  *** FOR MOBILE
-  ** MAX : 640PX / 40em
   */
   /*--------------------------------
   *** FOR MINI MOBILE
@@ -1168,7 +1166,7 @@ body li {
   padding: 0.25em 0.75em;
 }
 .plan__Selector__Hub .plans .mainBox .custom-divider {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
   margin: 0.75em 0;
   height: 0.1875rem;
 }
@@ -1243,36 +1241,36 @@ body li {
 }
 @media screen and (max-width: 62em) {
   .plan__Selector__Hub .plans {
-    padding: 2rem;
+    padding: 2em;
     border-radius: 10px;
     margin: auto;
   }
   .plan__Selector__Hub .plans h1 {
-    font-size: 2rem;
+    font-size: 2.25em;
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5em;
   }
   .plan__Selector__Hub .plans .mainBox {
-    padding-top: 1.5rem;
+    padding-top: 1.5em;
   }
   .plan__Selector__Hub .plans .mainBox .subscription {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 1rem;
-    padding: 1.5rem;
+    gap: 1em;
+    padding: 1.5em;
     background-color: rgb(38, 39, 40);
     border-radius: 0.5em;
   }
   .plan__Selector__Hub .plans .mainBox .subscription .subscription-level {
     justify-content: center;
-    gap: 1rem;
+    gap: 1em;
   }
   .plan__Selector__Hub .plans .mainBox .subscription .subscription-level h3 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
   }
   .plan__Selector__Hub .plans .mainBox .subscription .subscription-options {
     justify-content: center;
-    gap: 1rem;
+    gap: 1em;
   }
   .plan__Selector__Hub .plans .mainBox .subscription .subscription-options span {
     width: 100%;
@@ -1281,7 +1279,7 @@ body li {
   }
   .plan__Selector__Hub .plans .mainBox .box {
     flex-direction: column;
-    gap: 1rem;
+    gap: 1em;
     align-items: center;
   }
   .plan__Selector__Hub .plans .mainBox .box .status {
@@ -1298,13 +1296,13 @@ body li {
   }
   .plan__Selector__Hub .plans .download-box .information-section {
     width: 100%;
-    padding: 2rem 1rem;
+    padding: 2em 1em;
   }
   .plan__Selector__Hub .plans .download-box .information-section .btn-download ul {
     display: contents;
   }
   .plan__Selector__Hub .plans .download-box .image-box {
-    margin-top: 1rem;
+    margin-top: 1em;
   }
 }
 @media screen and (min-width: 31.25em) and (max-width: 47.9375em) {
