--- a/app-land/scss/layout/_exploreHub.scss
+++ b/app-land/scss/layout/_exploreHub.scss
@@ -208,7 +208,6 @@
     width: 100%;
     left: 0rem;
 
-  @include laptop {
     h2 {
       text-align: center;
     }
