--- a/app-land/scss/layout/_planSelectorHub.scss
+++ b/app-land/scss/layout/_planSelectorHub.scss
@@ -95,7 +95,7 @@
       }
 
       .custom-divider {
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: $transparentBlack;
         margin: nth($spaces, 3) 0;
         height: 0.1875rem;
       }
@@ -193,39 +193,39 @@
 
   @include tablet {
     .plans {
-      padding: 2rem;
+      padding: nth($spaces, 8);
       border-radius: 10px;
       margin: auto;
 
       h1 {
-        font-size: 2rem;
+        font-size: $fontSize4Xl;
         text-align: center;
-        margin-bottom: 1.5rem;
+        margin-bottom: nth($spaces, 6);
       }
 
       .mainBox {
-        padding-top: 1.5rem;
+        padding-top: nth($spaces, 6);
 
         .subscription {
           display: grid;
           grid-template-columns: 1fr;
-          gap: 1rem;
-          padding: 1.5rem;
+          gap: nth($spaces, 4);
+          padding: nth($spaces, 6);
           background-color: $charcoalGray;
           border-radius: $roundedLg;
 
           .subscription-level {
             justify-content: center;
-            gap: 1rem;
+            gap: nth($spaces, 4);
 
             h3 {
-              font-size: 1.5rem;
+              font-size: $fontSize2Xl;
             }
           }
 
           .subscription-options {
             justify-content: center;
-            gap: 1rem;
+            gap: nth($spaces, 4);
 
             span {
               width: 100%;
@@ -237,7 +237,7 @@
 
         .box {
           flex-direction: column;
-          gap: 1rem;
+          gap: nth($spaces, 4);
           align-items: center;
 
           .status {
@@ -258,7 +258,7 @@
 
         .information-section {
           width: 100%;
-          padding: 2rem 1rem;
+          padding: nth($spaces, 8) nth($spaces, 4);
 
           .btn-download {
             ul {
@@ -268,7 +268,7 @@
         }
 
         .image-box {
-          margin-top: 1rem;
+          margin-top: nth($spaces, 4);
         }
       }
     }
